tests/invalid/foreign_singleton.err_exp2
foreign_singleton.m:026: In clause for predicate `foreign_singleton.f/3':
foreign_singleton.m:026:   warning: variable `X' occurs only once in this scope.
foreign_singleton.m:030: In clause for predicate `foreign_singleton.g/3':
foreign_singleton.m:030:   warning: variable `X' occurs only once in this scope.
foreign_singleton.m:026: In clause for `f(out, di, uo)':
foreign_singleton.m:026:   mode error: argument 1 did not get sufficiently instantiated.
foreign_singleton.m:026:   Final instantiatedness of `X' was `free',
foreign_singleton.m:026:   expected final instantiatedness was `ground'.
foreign_singleton.m:030: In clause for `g(out, di, uo)':
foreign_singleton.m:030:   mode error: argument 1 did not get sufficiently instantiated.
foreign_singleton.m:030:   Final instantiatedness of `X' was `free',
foreign_singleton.m:030:   expected final instantiatedness was `ground'.
For more information, try recompiling with `-E'.
